Finish to replace headless UI components with https://ui.shadcn.com/

--- a/frontend/TODO.txt
+++ b/frontend/TODO.txt
@@ -21,18 +21,11 @@
   Answer (sjun):
   - always show the buttons, after arbitration
   BEN:
-  - Unclear, we cannot jsut show all the buttons... need refinement after the releaase
+  - Unclear, we cannot just show all the buttons... need refinement after the releaase
 
 - Community requests:
   - (luca) Wouldn't it be possible to trigger EE connection from mobile simply by clicking on the button?
   - (nenchy) Also, once wallet connected via built in browser, no way to disconnect it from Arbiter app UI
-
-- (zehua) There are some issues with how to obtain the InputIndex. 
-    - In cases of evil, there may be multiple inputs. 
-    - The correct way to determine the InputIndex is as follows:
-        1. get the UTXO from the contract, which is a transaction hash (tx hash)
-        2. check Utxo hash's position in the TxIn of the current BTC transaction which you want to call zkp verify
-        3. If it’s the first input, the index is 0; if it’s the second input, the index is 1, and so on. 
 
 
 - transactions list submit signature: should check if the current btc address is the same as the arbiter operator or transaction one?
@@ -56,14 +49,13 @@
     - There is a data that need to be signed, you should call the wallet to sign it
     - Pending feature completion by xiaobin
 
-- Finish to replace headless UI components with https://ui.shadcn.com/
-  - Compensation details dialog
-
 - Email service for arbiters:
   - "Arbiter can register an email for the arbitration notification, we need a background script to check the events"
   - "new arbitration request" event. poll subgraph (better?) or listen to evm events.
   - need to create a backend
   - we already have bel2.org belayer2.org in zoho mail
+
+P3:
 
 - Ability to unregister dapp: 
   - TBD: from dapps list of from my dashboard?
@@ -72,6 +64,13 @@
   - We should consider using subgraph only to LIST items (arbiters, transactions) but with minimal information,
     for example information we need for search queries (pagination, search tx id...)
   - Everything else should be handled by multicalls from the client app.
+
+- (zehua) There are some issues with how to obtain the InputIndex (for illegal signature compensation). 
+    - In cases of evil, there may be multiple inputs. 
+    - The correct way to determine the InputIndex is as follows:
+        1. get the UTXO from the contract, which is a transaction hash (tx hash)
+        2. check Utxo hash's position in the TxIn of the current BTC transaction which you want to call zkp verify
+        3. If it’s the first input, the index is 0; if it’s the second input, the index is 1, and so on. 
 
 ------ HELPER INFO ------
 
@@ -99,3 +98,5 @@ Claim contract :
 
 ZPService:
 - Contract code: https://github.com/BeL2Labs/cairo-suite/blob/alex/feat_check_sig/solidity-stark-verifier-cairo-os/src/apps/TxSigProof.sol
+
+
